@@ -86,8 +86,9 @@
 
 /* BBCode styling */
 #content {
-	height: 350px;
+
 }
+
 #bbcode_output {
 	padding-left: 24px;
 	padding-top: 10px;
