@@ -1,5 +1,6 @@
 #content {
 	height: 250px;
+        margin-bottom: 50px;
 }
 
 .toolbox {
