@@ -25,7 +25,6 @@
 {% endblock content %}
 
 {% block css %}
-  <link href="static/css/mainpage_style.css" media="screen" rel="stylesheet" type="text/css" />
   <link href="static/css/about_style.css" media="screen" rel="stylesheet" type="text/css" />
 {% endblock css %}
 
