@@ -77,7 +77,7 @@
 {% for page in range(1, pages+1) %}
           <input type="checkbox" name="pages[]" value="{{ page }}">{{ page }}<br />
 {% set current_page_in_col = current_page_in_col + 1 %}
-{% if current_page_in_col == 8 %}
+{% if current_page_in_col == 8 and page != pages %}
 {% set current_page_in_col = 1 %}
         </div>
 {% if page != pages %}
@@ -85,8 +85,10 @@
           <span class="checkbox_title"></span>
 {% endif %}
 {% endif %}
-{% endfor %}
+{% if page == pages %}
         </div>
+{% endif %}
+{% endfor %}
 {% endif %}
 
         <div class="clearbar"></div>
