@@ -19,6 +19,7 @@
       </form>
     </div>
 {% endif %}
+    <div class="clearbar"></div>
 {% endblock content %}
 
 {% block css %}
