@@ -1,0 +1,30 @@
+{% extends "layout.html" %}
+
+{% block content %}
+    <span id="donate_title">Help support TF2Toolbox!</span>
+    <br/>
+    <span id="donate_intro">TF2Toolbox is supported entirely out of pocket by the developer, myself. Your support is greatly appreciated!</span>
+ 
+     <span id="donate_reasons">Dedicated Linode hosting ($20/mo.) &#8226 Domain Name ($20/mo.) &#8226 Hours of dev. time, happily given :) &#8226 And no ads!</span>
+
+    <form id="pp_button" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+    <input type="hidden" name="cmd" value="_s-xclick">
+    <input type="hidden" name="encrypted" value="-----BEGIN PKCS7-----MIIHLwYJKoZIhvcNAQcEoIIHIDCCBxwCAQExggEwMIIBLAIBADCBlDCBjjELMAkGA1UEBhMCVVMxCzAJBgNVBAgTAkNBMRYwFAYDVQQHEw1Nb3VudGFpbiBWaWV3MRQwEgYDVQQKEwtQYXlQYWwgSW5jLjETMBEGA1UECxQKbGl2ZV9jZXJ0czERMA8GA1UEAxQIbGl2ZV9hcGkxHDAaBgkqhkiG9w0BCQEWDXJlQHBheXBhbC5jb20CAQAwDQYJKoZIhvcNAQEBBQAEgYCyI0ol6bhkUdbgdASWJPm8vH6tHsJXd9Fmc924nK13mg+fBnXRCOHQ0vYbQtpbgYvhY1TxpPMSKxc3FXqpxhcMDMPfpnMuBii3s3fxRg1mz6L8qgoGI6KS0j7Unv35VQ9oDbZPi1P3LBgjGTz/EDF7d+RLXQ7KqqKPJCawcRhd4zELMAkGBSsOAwIaBQAwgawGCSqGSIb3DQEHATAUBggqhkiG9w0DBwQIy1Abu4FGNjeAgYj7AkRKTuiClsofe/xJ28u7naAh/nZ8FpbUxc19ddFGMyr1wN/R3DDTnF094w6MhDA5rfXlwPp7F99XJ6lb9vbV6mn54urjNgb2fxMHYj4yQzUNa2lsI87s4Qh0j3WDrO6bWoXRb6WMTy/quBzz5qgN3TgDR/cVmZjzdXltZ36Dk7K4JnfB4/JRoIIDhzCCA4MwggLsoAMCAQICAQAwDQYJKoZIhvcNAQEFBQAwgY4xCzAJBgNVBAYTAlVTMQswCQYDVQQIEwJDQTEWMBQGA1UEBxMNTW91bnRhaW4gVmlldzEUMBIGA1UEChMLUGF5UGFsIEluYy4xEzARBgNVBAsUCmxpdmVfY2VydHMxETAPBgNVBAMUCGxpdmVfYXBpMRwwGgYJKoZIhvcNAQkBFg1yZUBwYXlwYWwuY29tMB4XDTA0MDIxMzEwMTMxNVoXDTM1MDIxMzEwMTMxNVowgY4xCzAJBgNVBAYTAlVTMQswCQYDVQQIEwJDQTEWMBQGA1UEBxMNTW91bnRhaW4gVmlldzEUMBIGA1UEChMLUGF5UGFsIEluYy4xEzARBgNVBAsUCmxpdmVfY2VydHMxETAPBgNVBAMUCGxpdmVfYXBpMRwwGgYJKoZIhvcNAQkBFg1yZUBwYXlwYWwuY29tMIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQDBR07d/ETMS1ycjtkpkvjXZe9k+6CieLuLsPumsJ7QC1odNz3sJiCbs2wC0nLE0uLGaEtXynIgRqIddYCHx88pb5HTXv4SZeuv0Rqq4+axW9PLAAATU8w04qqjaSXgbGLP3NmohqM6bV9kZZwZLR/klDaQGo1u9uDb9lr4Yn+rBQIDAQABo4HuMIHrMB0GA1UdDgQWBBSWn3y7xm8XvVk/UtcKG+wQ1mSUazCBuwYDVR0jBIGzMIGwgBSWn3y7xm8XvVk/UtcKG+wQ1mSUa6GBlKSBkTCBjjELMAkGA1UEBhMCVVMxCzAJBgNVBAgTAkNBMRYwFAYDVQQHEw1Nb3VudGFpbiBWaWV3MRQwEgYDVQQKEwtQYXlQYWwgSW5jLjETMBEGA1UECxQKbGl2ZV9jZXJ0czERMA8GA1UEAxQIbGl2ZV9hcGkxHDAaBgkqhkiG9w0BCQEWDXJlQHBheXBhbC5jb22CAQAwDAYDVR0TBAUwAwEB/zANBgkqhkiG9w0BAQUFAAOBgQCBXzpWmoBa5e9fo6ujionW1hUhPkOBakTr3YCDjbYfvJEiv/2P+IobhOGJr85+XHhN0v4gUkEDI8r2/rNk1m0GA8HKddvTjyGw/XqXa+LSTlDYkqI8OwR8GEYj4efEtcRpRYBxV8KxAW93YDWzFGvruKnnLbDAF6VR5w/cCMn5hzGCAZowggGWAgEBMIGUMIGOMQswCQYDVQQGEwJVUzELMAkGA1UECBMCQ0ExFjAUBgNVBAcTDU1vdW50YWluIFZpZXcxFDASBgNVBAoTC1BheVBhbCBJbmMuMRMwEQYDVQQLFApsaXZlX2NlcnRzMREwDwYDVQQDFAhsaXZlX2FwaTEcMBoGCSqGSIb3DQEJARYNcmVAcGF5cGFsLmNvbQIBADAJBgUrDgMCGgUAoF0wGAYJKoZIhvcNAQkDMQsGCSqGSIb3DQEHATAcBgkqhkiG9w0BCQUxDxcNMTEwOTA4MDYxNDI4WjAjBgkqhkiG9w0BCQQxFgQUINlXpqyIToUDHJ3TANl44ZuR17swDQYJKoZIhvcNAQEBBQAEgYAgTsnK3JzANFItlKLt1cVx9kKd5ZwryeYAqEFLQMI2fXxoSi7aJtFfCSsywJmEiZy4LIODXxH55nSb9rXDQicvcEHd7YITi+WcEB28qzktE2vlf9zWVrFROStCSGNCCJVHnuZest76ZEwkdwPgnnDa5oiaU8tAyNLT+IVZivMwkw==-----END PKCS7-----
+    ">
+    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+    </form>
+
+    <div id="donors">
+      <span id="donor_list_title">Donors as of 9/15/2011 - thank you!</span>
+      <ul class="donor_list">
+        <li>Anonymous x 1</li>
+      </ul>
+      <div class="main_clearbar"></div>
+    </div>
+{% endblock content %}
+
+{% block css %}
+{% endblock css %}
+
+
