@@ -79,7 +79,7 @@
     <div id="timing">
       SteamAPI: {{ template_info['api_time']|round(2) }}s &#8226 Python: {{ template_info['py_time']|round(2) }}s
     </div>
-    <span class="footer_text"><a href="about">About</a> &#8226 <a href="static/changelog.txt">Changelog</a> &#8226 <a href="http://formspring.me/tf2toolbox" target="_blank">Formspring</a> &#8226{#<a href="/donate">Donate</a> &#8226 #} <a href="http://steampowered.com">Powered by Steam</a> &#8226 Created by <a href="http://lions.dongues.net" target="_blank">&gt;:3</a> <a href="http://steamcommunity.com/id/vmdx/" target="_blank">VMDX</a></span>
+    <span class="footer_text"><a href="about">About</a> &#8226 <a href="static/changelog.txt">Changelog</a> &#8226 <a href="http://formspring.me/tf2toolbox" target="_blank">Formspring</a> &#8226 <a href="/donate">Donate</a> &#8226 <a href="http://steampowered.com">Powered by Steam</a> &#8226 Created by <a href="http://lions.dongues.net" target="_blank">&gt;:3</a> <a href="http://steamcommunity.com/id/vmdx/" target="_blank">VMDX</a></span>
 
   </div>
 
